css flexbox was added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/media-queries.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
 
+    <!--favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/favicons/favicon-16x16.png">
@@ -385,7 +386,7 @@
     </div>
 
     <div class="row">
-        <form method="post" action="#" class="contact-form" autocomplete="off">
+        <form method="post" action="http://localhost:3000/ttt" class="contact-form" autocomplete="off">
 
             <div class="row">
                 <div class="col span-1-of-3">
